--- a/src/style/main.css
+++ b/src/style/main.css
@@ -1,5 +1,5 @@
 
-.header{ 
+.header{
     width: 100%;
     height: 5rem;
     color: azure;
@@ -8,6 +8,13 @@
 .header-row-mobile{
     display: none;
 }
+a:link { 
+    text-decoration: none; 
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+
 .search-icon{
     height: 2rem;
     width: 2rem;
@@ -68,7 +75,12 @@
     margin-left: 1rem;
     align-items: center;
     align-content: center;
-    font-family: monospace
+    font-family: monospace;
+    text-decoration: none;
+    color:white;
+}
+.logo a{
+    color:white;
 }
 .header-row  > .search{
     display: flex;
@@ -144,7 +156,7 @@
 .higlighted-products-1 > .product{
     height:40vh;
     margin: auto;
-    width: 45vh;
+    width: 43vh;
     box-shadow: 1px 1px #000000;
     border-radius: 1rem;
     /* transition: all .1s ease-out; */
@@ -156,6 +168,7 @@
     /* margin-right: 1rem; */
     border-radius: 1rem;
     padding: 1rem;
+    margin-top: 1rem;
     align-items: center;
     justify-content: center;
     height:10rem;
