--- a/src/style/mid.css
+++ b/src/style/mid.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 320px) {
+@media only screen and (max-width: 768px) {
     .header-row{
      display: none;;
     }
@@ -9,7 +9,7 @@
          align-items: center;
          align-content: center;
          position: fixed;
-         background-color: rgb(11, 21, 51);
+         background-color: rgb(11, 64, 225);
          z-index: 99999998;
          
      }
@@ -127,7 +127,7 @@
      .higlighted-products-1 > .product{
          height:30vh;
          margin: auto;
-         width: 20vh;
+         width: 100%;
          margin-top: 1rem;
      
          box-shadow: 1px 1px #000000;
