--- a/src/style/main.css
+++ b/src/style/main.css
@@ -248,7 +248,7 @@ a:link {
     z-index: 99999998;
     background-color: red;
     width: 120px;
-    height: 200px;
+    height: fit-content;
     position:fixed ;
     border-radius: 5px;
     top:55px;
@@ -277,4 +277,109 @@ a:link {
 }
 .toggle-menu:hover  .my-account{
     display: none;
+}
+
+.register{
+    width: 50%;
+    height: fit-content;
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 3rem;
+    align-items: center;
+    justify-content: center;
+    background: white;
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 20px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+}
+.sso{
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: auto auto;
+}
+.sso > button{
+    border-radius: 20px;
+    height:3rem;
+    width:fit-content;
+    font-size: 15px;
+    padding: auto;
+    cursor: pointer;
+}
+.sso .sso-icon-fb{
+    font-size: 30px;
+    color:rgb(26, 26, 155);
+    vertical-align: middle;
+
+}
+.sso .sso-icon-google{
+    font-size: 30px;
+    vertical-align: middle;
+
+}
+.register >input{
+    width:70%;
+    margin-top: 8px;
+    height: 30px;
+
+}
+.register .signup{
+    border-radius: 20px;
+    height:3rem;
+    width:30%;
+    font-size: 20px;
+    padding: auto;
+    background-color: #002963;
+    color:white;
+    cursor: pointer;
+}
+.product-page{
+    margin-top :1rem;
+    display: grid;
+    gap: 8px;
+    grid-template-columns: 12rem auto;
+}
+.product-left-menu{
+    border-radius: 15px;
+    height: 100%;
+    padding: auto;
+    background-color: white;
+    
+}
+.product-content{
+    width: 100%;
+    height: 100%;
+    background-color:  rgb(232, 232, 232);;
+    padding: auto;
+}
+.search-result{
+    border-radius: 20px;
+    padding: auto;
+    margin-left: 10px;
+}
+.product-content-container{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 3px;
+}
+.product-content-item{
+    background-color: white;
+    border-radius: 15px;
+    width: 53vh;
+    margin-top:5px;
+    height: 30vh;
+    cursor: pointer;
+}
+.product-content-item .product-tag{
+margin-top: 150px;
+padding: 2px;
+
+}
+.star-rating{
+    color: orange;
+    font-size: 15px;
 }
